--- a/style.css
+++ b/style.css
@@ -25,10 +25,10 @@ body {
   /*float: left; */
   text-align: center;
   color: #c9d1d9;
-  padding: 2rem;
+  padding: 1rem;
   border: 0.4rem solid rgba(0,0,0,.6);
   border-radius: 1rem;
-  font-size: 6rem;
+  font-size: 4rem;
 }
 
 #linea-ts {
@@ -36,18 +36,27 @@ body {
   background-color: rgba(0,0,0,.8);
   border-radius: 1rem;
   padding: 6rem 3rem;
-  margin: 9rem 10rem 5rem 5rem;
+  margin: 6rem 10rem 5rem 5rem;
 }
 
-#bootcamp-TS {
-  margin-top: 14rem;
-  padding: 1rem;
-  font-size: 8rem;
+h2#codecamping-TS {
+  margin: auto;
+  padding: 3rem;
+  font-size: 9rem;
   text-align: center;
   /*color: rgb(182, 92, 230);*/
   color: plum;
   background-color: rgba(0,0,0,.8);
   border-radius: 1rem;
+}
+
+#fecha {
+  margin-top: 12rem;
+  font-size: 4rem;
+  text-align: center;
+  color: #0d1117;
+  background-color: #1e3799;
+  border-radius: 0.6rem;
 }
 
 section {
