--- a/css/style.css
+++ b/css/style.css
@@ -69,18 +69,71 @@ body {
 
 #fecha {
   margin-top: 12rem;
-  font-size: 4rem;
+  font-size: 3rem;
+  font-weight: bold;
+  margin: 5rem 20rem 15rem;
   text-align: center;
-  color: #000;
+  color: #c9d1d9;
   background-color: #1e3799;
   border-radius: 0.6rem;
 }
 
-section {
-  background-color: rgba(0,0,0,.6);
+.subtitulos {
+  font-size: 5rem;
+  text-align: center;
+  color: #000;
+  background-color: #1e3799;
   border-radius: 1rem;
-  padding: 2rem;
+  margin: 5rem 20rem 2rem;
+  padding: 0.5rem;
+}
+
+.mochila .subtitulos {
+  background-color: rgb(196 , 207, 233);
+}
+
+.python .subtitulos {
+  background-color: rgb(196, 233, 211);
+}
+
+.java .subtitulos {
+  background-color: rgb(233, 196, 196);
+}
+
+section {
+  color: #000;
   font-size: 2rem;
+  border-radius: 1rem;
+}
+
+section h2 {
+  margin-bottom: 5rem;
+}
+
+div {
+  border-radius: 1rem;
+  padding: 2rem 2rem 0.5rem;
+}
+
+.mochila div {
+  background-color: rgba(196, 207, 233, 0.6);
+}
+
+.python div {
+  background-color: rgba(196, 233, 211, 0.6);
+}
+
+.java div {
+  background-color: rgba(233, 196, 196, 0.6);
+}
+
+.sesiones {
+  background-color: rgb(196, 207, 233);
+  color: var(--primario);
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  margin: 2rem;
+  font-weight: bold;
 }
 
 #redes {
@@ -97,7 +150,8 @@ section {
 #aprendizaje {
   border-radius: 1rem;
   padding: 2rem;
-  font-size: 2rem;
+  font-size: 1.8rem;
+  font-weight: bold;
   text-align: center;
   margin-left: 7rem;
   margin-bottom: 0;
@@ -122,11 +176,6 @@ a {
   text-align: center;
   margin: 1.5rem;
 }
-/*nav ul {
-  display: inline-block;
-  border: 4px solid #8297ab;
-  text-align: center;
-}*/
 
 /* Inconos */
 .icon {
