--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,25 @@ body {
   font-family: 'Krub', sans-serif;
 }
 
+@media (max-width: 1400px) {
+   body {
+     margin: 1rem 20rem;
+   }
+}
+
+@media (max-width: 1200px) {
+  body {
+    margin: 1rem 15rem;
+  }
+}
+
+@media (max-width: 800px) {
+  body {
+    margin: 1rem;
+  }
+}
+   
 #talento-sistemas {
-  /*float: left; */
   text-align: center;
   color: #c9d1d9;
   padding: 1rem;
@@ -41,11 +58,47 @@ body {
   font-size: 4rem;
 }
 
+@media (max-width: 1160px) {
+  #talento-sistemas {
+    font-size: 3rem;
+  }
+}
+
+@media (max-width: 480px) {
+  #talento-sistemas {
+    font-size: 2rem;
+  }
+}
+
 .linea-ts {
   background-color: rgba(0,0,0,.8);
   border-radius: 1rem;
   padding: 6rem 3rem;
   margin: 7rem 7rem 0;
+}
+
+@media (max-width: 1160px) {
+  .linea-ts {
+    border-radius: 0.5rem;
+    padding: 4rem 2rem;
+    margin: 6rem 3rem 0;
+  }
+}
+
+@media (max-width: 800px) {
+  .linea-ts {
+    border-radius: 0.5rem;
+    padding: 3rem 1.5rem;
+    margin: 8rem 2.5rem 0;
+  }
+}
+
+@media (max-width: 480px) {
+  .linea-ts {
+    border-radius: 0.5rem;
+    padding: 2rem 1rem;
+    margin: 6rem 2.5rem 0;
+  }
 }
 
 #uno {
@@ -61,10 +114,36 @@ body {
   padding: 6rem 3rem;
   font-size: 9rem;
   text-align: center;
-  /*color: rgb(182, 92, 230);*/
   color: plum;
   background-color: rgba(0,0,0,.8);
   border-radius: 1rem;
+}
+
+@media (max-width: 1400px) {
+  #codecamping-TS {
+    font-size: 8rem;
+  }
+}
+
+@media (max-width: 1160px) {
+  #codecamping-TS {
+    font-size: 6rem;
+    padding: 3rem 1rem;
+  }
+}
+
+@media (max-width: 800px) {
+  #codecamping-TS {
+    font-size: 5rem;
+    padding: 2rem;
+  }
+}
+ 
+@media (max-width: 480px) {
+  #codecamping-TS {
+    font-size: 4rem;
+    padding: 1rem;
+  }
 }
 
 #fecha {
@@ -78,6 +157,25 @@ body {
   border-radius: 0.6rem;
 }
 
+@media (max-width: 1200px) {
+  #fecha {
+    margin: 4rem 25rem 10rem;
+    font-size: 2rem;
+  }
+}
+
+@media (max-width: 1080px) {
+  #fecha {
+    margin: 3.5rem 15rem 7rem;
+  }
+}
+
+@media (max-width: 800px) {
+  #fecha {
+    margin: 3rem 2rem 6rem;
+  }
+}
+
 .subtitulos {
   font-size: 5rem;
   text-align: center;
@@ -88,7 +186,20 @@ body {
   padding: 0.5rem;
 }
 
-.mochila .subtitulos {
+@media (max-width: 1080px) {
+  .subtitulos {
+    font-size: 3rem;
+  }
+}
+
+@media (max-width: 980px) {
+  .subtitulos {
+    margin: 3rem 2rem;
+    font-size: 3rem;
+  }
+}
+
+.herramientas .subtitulos {
   background-color: rgb(196 , 207, 233);
 }
 
@@ -106,16 +217,29 @@ section {
   border-radius: 1rem;
 }
 
+@media (max-width: 1080px) {
+  section {
+    font-size: 1.5rem;
+  }
+}
+
 section h2 {
   margin-bottom: 5rem;
 }
 
+/* Contenido de las sesiones */
 div {
   border-radius: 1rem;
   padding: 2rem 2rem 0.5rem;
 }
 
-.mochila div {
+@media (max-width: 1080px) {
+  div {
+    padding: 1rem 1rem 0.1rem;
+  }
+}
+
+.herramientas div {
   background-color: rgba(196, 207, 233, 0.6);
 }
 
@@ -146,7 +270,7 @@ div {
   justify-content: center;
   padding-right: 7rem;
 }
-
+   
 #aprendizaje {
   border-radius: 1rem;
   padding: 2rem;
@@ -189,6 +313,12 @@ a {
   margin-top: 0;
 }
 
+@media (max-width: 1080px) {
+  .icon {
+    margin: 1.5rem;
+  }
+}
+
 .icon i {
   color: #fff;
   position: absolute;
@@ -201,9 +331,20 @@ a {
   
 }
 
+@media (max-width: 1080px) {
+  .icon i {
+    font-size: 2.5rem;
+
+      /* posición */
+    top: 55%;
+    left: 55%; 
+    transform: translate(-3%,-3%);
+  }
+}
+
 svg circle {
-  stroke-dasharray: 160;
-  transition: all .8s ease-in-out;  
+  stroke-dasharray: 10;
+  transition: all 0.01s ease-in-out;  
 }
 
 .icon:hover circle {
