--- a/css/style.css
+++ b/css/style.css
@@ -159,20 +159,20 @@ body {
 
 @media (max-width: 1200px) {
   #fecha {
-    margin: 4rem 25rem 10rem;
+    margin: 4rem 25rem 13rem;
     font-size: 2rem;
   }
 }
 
 @media (max-width: 1080px) {
   #fecha {
-    margin: 3.5rem 15rem 7rem;
+    margin: 3.5rem 15rem 11rem;
   }
 }
 
 @media (max-width: 800px) {
   #fecha {
-    margin: 3rem 2rem 6rem;
+    margin: 3rem 2rem 9rem;
   }
 }
 
@@ -194,7 +194,7 @@ body {
 
 @media (max-width: 980px) {
   .subtitulos {
-    margin: 3rem 2rem;
+    margin: 4rem 4rem 1.8rem;
     font-size: 3rem;
   }
 }
@@ -299,6 +299,7 @@ a {
 #copyright {
   text-align: center;
   margin: 1.5rem;
+  font-weight: bold;
 }
 
 /* Inconos */
@@ -315,13 +316,13 @@ a {
 
 @media (max-width: 1080px) {
   .icon {
-    margin: 1.5rem;
+    margin: 0 1rem 3rem;
   }
 }
 
 @media (max-width: 500px) {
   .icon {
-    margin: .2rem;
+    margin: 0 .2rem 3rem;
   }
 }
 
