--- a/css/style.css
+++ b/css/style.css
@@ -90,30 +90,30 @@ body {
   background-color: rgba(0,0,0,.8);
   border-radius: 1rem;
   padding: 6rem 3rem;
-  margin: 7rem 7rem 0;
+  margin: 9.5rem 7rem 0;
 }
 
 @media (max-width: 1160px) {
   .linea-ts {
     border-radius: 0.5rem;
-    padding: 4rem 2rem;
-    margin: 6rem 3rem 0;
+    padding: 5rem 2.5rem;
+    margin: 7.5rem 4rem 0;
   }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 914px) {
   .linea-ts {
     border-radius: 0.5rem;
-    padding: 3rem 1.5rem;
-    margin: 8rem 2.5rem 0;
+    padding: 4rem 2rem;
+    margin: 8.5rem 3rem 0;
   }
 }
 
 @media (max-width: 480px) {
   .linea-ts {
     border-radius: 0.5rem;
-    padding: 2rem 1rem;
-    margin: 6rem 2.5rem 0;
+    padding: 3rem 1.5rem;
+    margin: 6.5rem 2.5rem 0;
   }
 }
 
@@ -138,27 +138,28 @@ body {
 @media (max-width: 1400px) {
   #codecamping-TS {
     font-size: 8rem;
+    padding: 5rem 2rem;
   }
 }
 
 @media (max-width: 1160px) {
   #codecamping-TS {
-    font-size: 6rem;
-    padding: 3rem 1rem;
+    font-size: 7rem;
+    padding: 4rem 1.5rem;
   }
 }
 
 @media (max-width: 800px) {
   #codecamping-TS {
-    font-size: 5rem;
-    padding: 2rem;
+    font-size: 6rem;
+    padding: 3rem 1rem;
   }
 }
  
 @media (max-width: 480px) {
   #codecamping-TS {
     font-size: 4rem;
-    padding: 1rem;
+    padding: 2rem .5rem;
   }
 }
 
